tests/rosetta/out/Rust/abundant-deficient-and-perfect-number-classifications.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /tmp/abundant-deficient-and-perfect-number-classifications.rs:6:21
  |
6 |         while (p <= i as f64) / (2 as f64) {
  |                     ^^^^^^^^ expected integer, found `f64`

error[E0277]: can't compare `{integer}` with `f64`
 --> /tmp/abundant-deficient-and-perfect-number-classifications.rs:6:18
  |
6 |         while (p <= i as f64) / (2 as f64) {
  |                  ^^ no implementation for `{integer} < f64` and `{integer} > f64`
  |
  = help: the trait `PartialOrd<f64>` is not implemented for `{integer}`
  = help: the following other types implement trait `PartialOrd<Rhs>`:
            f128
            f16
            f32
            f64
            i128
            i16
            i32
            i64
          and 8 others

error[E0369]: cannot divide `bool` by `f64`
 --> /tmp/abundant-deficient-and-perfect-number-classifications.rs:6:31
  |
6 |         while (p <= i as f64) / (2 as f64) {
  |               --------------- ^ ---------- f64
  |               |
  |               bool

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308, E0369.
For more information about an error, try `rustc --explain E0277`.
