tests/rosetta/out/Rust/abundant-deficient-and-perfect-number-classifications.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn pfacSum(i: i32) -> i32 {
        let mut sum = 0;
        let mut p = 1;
        while (p <= i as f64) / (2 as f64) {
            if i % p == 0 {
                sum += p;
            }
            p += 1;
        }
        return sum;
    }
    fn main() -> () {
        let mut d = 0;
        let mut a = 0;
        let mut pnum = 0;
        let mut i = 1;
        while i <= 20000 {
            let j = pfacSum(i);
            if j < i {
                d += 1;
            }
            if j == i {
                pnum += 1;
            }
            if j > i {
                a += 1;
            }
            i += 1;
        }
        println!("{}", vec![format!("{}", format!("{}{}", format!("{}{}", "There are ", d.to_string()), " deficient numbers between 1 and 20000"))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        println!("{}", vec![format!("{}", format!("{}{}", format!("{}{}", "There are ", a.to_string()), " abundant numbers  between 1 and 20000"))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
        println!("{}", vec![format!("{}", format!("{}{}", format!("{}{}", "There are ", pnum.to_string()), " perfect numbers between 1 and 20000"))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
    }
    main();
}
